objects/Study_Site__c.object
<CustomObject>
    <description>Study Site Profile</description>
    <fields>
        <fullName>Agrees_to_Referral_Reimbursement__c</fullName>
        <label>Agrees to Referral Reimbursement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_N_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billable_Code_CRM_Number__c</fullName>
        <description>HCP/Physician Billable Code CRM Number</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>HCP/Physician Billable Code CRM Number</inlineHelpText>
        <label>Billable Code (CRM Number)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Chart_Review__c</fullName>
        <formula>Clinical_Trial_Profile__r.Chart_Review__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Trial&apos;s HCP/Physician Chart Review Amount</inlineHelpText>
        <label>Chart Review</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cleaned_Study_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cleaned Study Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Trial_Profile__c</fullName>
        <description>Connects the study site to the primary study that it relates to</description>
        <label>Clinical Trial Profile</label>
        <referenceTo>Clinical_Trial_Profile__c</referenceTo>
        <relationshipName>Study_Site_Profiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Enrollment_Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Enrollment Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrollment_Actual_to_Target__c</fullName>
        <formula>Enrollment_Actual__c-Enrollment_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual- Target</inlineHelpText>
        <label>Enrollment Actual to Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrollment_End_Date2__c</fullName>
        <formula>Clinical_Trial_Profile__r.Estimated_Completion_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trial Enrollment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>HCP/Physician Enrollment End Date</inlineHelpText>
        <label>Enrollment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Start_Date2__c</fullName>
        <formula>Clinical_Trial_Profile__r.Estimated_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trial Enrollment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>HCP/Physician Enrollment Start Date</inlineHelpText>
        <label>Enrollment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Target__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Enrollment Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HCP_Contacted_Potential_Participant__c</fullName>
        <formula>Clinical_Trial_Profile__r.HCP_Contacted_Potential_Participant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Trial&apos;s HCP/Physician HCP Contacted Potential Participant Amount</inlineHelpText>
        <label>HCP Contacted Potential Participant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Virtual_Study_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Study Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Orientation__c</fullName>
        <formula>Clinical_Trial_Profile__r.Orientation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Trial&apos;s HCP/Physician Orientation Amount</inlineHelpText>
        <label>Orientation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Override_PI_Referral_Status__c</fullName>
        <label>Override PI Referral Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Deactivated (Admin)</fullName>
                </value>
                <value>
                    <fullName>Invitation Sent</fullName>
                </value>
                <value>
                    <fullName>Non-Responsive (Admin)</fullName>
                </value>
                <value>
                    <fullName>Declined (Acceptance)</fullName>
                </value>
                <value>
                    <fullName>Accepted (Admin)</fullName>
                </value>
                <value>
                    <fullName>On Hold (Admin)</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <isActive>false</isActive>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Active (Admin)</fullName>
                    <isActive>false</isActive>
                    <label>Active (Admin)</label>
                </value>
                <value>
                    <fullName>No Response</fullName>
                    <isActive>false</isActive>
                    <label>No Response</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                    <isActive>false</isActive>
                    <label>Rejected</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Override_Status_Updated_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Override Status Updated By</label>
        <length>85</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Study_Site_Recruitment_Status__c</fullName>
        <label>Override Study Site Recruitment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Actively Enrolling</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Enrollment Closed</fullName>
                </value>
                <value>
                    <fullName>No_Longer_Enrolling</fullName>
                    <label>No Longer Enrolling</label>
                </value>
                <value>
                    <fullName>PI cannot accept referrals based on Site status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PI_Contact__c</fullName>
        <formula>HYPERLINK( &quot;/&quot;&amp;Principal_Investigator__c , Principal_Investigator__r.FirstName&amp;&quot; &quot; &amp;Principal_Investigator__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PI Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Pays_for_Referral_Activity__c</fullName>
        <defaultValue>&apos;Yes&apos;</defaultValue>
        <inlineHelpText>HCP/Physician Sponsor Pays for Referral Activity Y N</inlineHelpText>
        <label>PI Pays for Referral Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_N_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PI_Status_Reason__c</fullName>
        <inlineHelpText>Reasons why PI suspends enrollment for a clinical trial</inlineHelpText>
        <label>PI Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sponsor Hold</fullName>
                </value>
                <value>
                    <fullName>Supply/resupply of investigational product</fullName>
                </value>
                <value>
                    <fullName>Supply/resupply of Study Materials (Lab Kits)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prescreen__c</fullName>
        <formula>Clinical_Trial_Profile__r.Prescreen__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Trial&apos;s HCP/Physician Prescreen Amount</inlineHelpText>
        <label>Prescreen</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Key__c</fullName>
        <description>STDY_SITE_KEY + INVSTGR_KEY</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>STDY_SITE_KEY + INVSTGR_KEY</inlineHelpText>
        <label>Primary Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_Key_ePR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Primary Key ePR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_Investigator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Principal Investigator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PI&apos;s Study Sites</relationshipLabel>
        <relationshipName>Study_Site</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Protocol_Country_Id__c</fullName>
        <description>CTMS Country Id</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Protocol Country Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Protocol_ID__c</fullName>
        <formula>Clinical_Trial_Profile__r.Protocol_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Clinical Trial Profile&apos;s Protocol Id</inlineHelpText>
        <label>Protocol ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radius_Type__c</fullName>
        <label>Radius Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Miles</fullName>
                </value>
                <value>
                    <fullName>Kilometers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Radius_for_Participation__c</fullName>
        <inlineHelpText>How far will we allow an HCP to search for a participating PI</inlineHelpText>
        <label>Radius for Participation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recruitment_Status__c</fullName>
        <label>CTMS Recruitment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved for Site Selection Visit</fullName>
                </value>
                <value>
                    <fullName>Back-Up</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Conditional Selected</fullName>
                </value>
                <value>
                    <fullName>Contacted (Feasibility)</fullName>
                </value>
                <value>
                    <fullName>Contacted (Site ID)</fullName>
                </value>
                <value>
                    <fullName>Dropped</fullName>
                </value>
                <value>
                    <fullName>Enrollment Closed</fullName>
                </value>
                <value>
                    <fullName>Enrollment On-Hold</fullName>
                </value>
                <value>
                    <fullName>Enrollment Open</fullName>
                </value>
                <value>
                    <fullName>Essential Documents in place</fullName>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Interested (Feasibility)</fullName>
                </value>
                <value>
                    <fullName>Interested (Site ID)</fullName>
                </value>
                <value>
                    <fullName>Non-Responder (Feasibility)</fullName>
                </value>
                <value>
                    <fullName>Non-Responder (Site ID)</fullName>
                </value>
                <value>
                    <fullName>Not Interested (Feasibility)</fullName>
                </value>
                <value>
                    <fullName>Not Interested (Site ID)</fullName>
                </value>
                <value>
                    <fullName>Not Selected</fullName>
                </value>
                <value>
                    <fullName>Null</fullName>
                </value>
                <value>
                    <fullName>Permanently Closed</fullName>
                </value>
                <value>
                    <fullName>Prematurely Closed</fullName>
                </value>
                <value>
                    <fullName>Pre-Selected</fullName>
                </value>
                <value>
                    <fullName>Ready for Initiation</fullName>
                </value>
                <value>
                    <fullName>Regulatory Green Light</fullName>
                </value>
                <value>
                    <fullName>Regulatory Initiation</fullName>
                </value>
                <value>
                    <fullName>Rejected for Site Selection Visit</fullName>
                </value>
                <value>
                    <fullName>Selected</fullName>
                </value>
                <value>
                    <fullName>Targeted</fullName>
                </value>
                <value>
                    <fullName>Unsure (Feasibility)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <formula>Clinical_Trial_Profile__r.Referral__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Trial&apos;s HCP/Physician Referral Amount</inlineHelpText>
        <label>Referral</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SPNL_LN_assignment__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>SPNL LN (assignment)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Site_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Site__c , Site__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Study Sites</relationshipLabel>
        <relationshipName>Study_Sites</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sponsor_Pays_for_Referral_Activity__c</fullName>
        <formula>TEXT(Clinical_Trial_Profile__r.Sponsor_Pays_for_Referral_Activity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sponsor Pays for Referral Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Site_Full_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Study Site Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Site_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Study Site Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Study_Site_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Study Site Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Site_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Phone number referenced in the email for Virtual Trial Participants</inlineHelpText>
        <label>Study Site Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Study_Site_Status_Reason__c</fullName>
        <inlineHelpText>Reason for Pausing Studies</inlineHelpText>
        <label>Study Site Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sponsor Initiated Hold</fullName>
                </value>
                <value>
                    <fullName>Supply/Resupply of Investigational Product</fullName>
                </value>
                <value>
                    <fullName>Supply/Resupply of Supplies/Materials (i.e., Lab Kits)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suppress_Participant_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, no emails will be sent to participants for this study site.</inlineHelpText>
        <label>Suppress Participant Emails</label>
        <type>Checkbox</type>
    </fields>
    <label>Study Site</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>Protocol_ID__c</columns>
        <columns>Billable_Code_CRM_Number__c</columns>
        <columns>Clinical_Trial_Profile__c</columns>
        <columns>Study_Site_Number__c</columns>
        <columns>NAME</columns>
        <columns>Principal_Investigator__c</columns>
        <columns>Override_PI_Referral_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>PI_Recruitment_Support</fullName>
        <columns>Enrollment_Actual_to_Target__c</columns>
        <columns>Enrollment_Target__c</columns>
        <columns>Enrollment_Actual__c</columns>
        <columns>Override_PI_Referral_Status__c</columns>
        <columns>Clinical_Trial_Profile__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Enrollment_Actual_to_Target__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </filters>
        <label>PI Recruitment Support</label>
    </listViews>
    <listViews>
        <fullName>Study_Sites_Rejected_by_PI</fullName>
        <columns>Study_Site_Number__c</columns>
        <columns>NAME</columns>
        <columns>Principal_Investigator__c</columns>
        <columns>Clinical_Trial_Profile__c</columns>
        <columns>Override_PI_Referral_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Override_PI_Referral_Status__c</field>
            <operation>equals</operation>
            <value>Accepted,Invitation Sent,Declined (Acceptance),Accepted (Admin)</value>
        </filters>
        <label>Study Sites by PI Status</label>
    </listViews>
    <listViews>
        <fullName>test</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>test</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Study Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PI_Hold</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISCHANGED(Override_PI_Referral_Status__c ),
(ISPICKVAL(PRIORVALUE(Override_PI_Referral_Status__c ), &quot;On Hold&quot;)),ISPICKVAL(Override_Study_Site_Recruitment_Status__c, &quot;On Hold&quot;) )</errorConditionFormula>
        <errorMessage>This Override PI Recruitment Status value cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Site_On_Hold</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISCHANGED(Override_Study_Site_Recruitment_Status__c),

ISPICKVAL(PRIORVALUE(Override_Study_Site_Recruitment_Status__c), &quot;On Hold&quot;), 

ISPICKVAL(Clinical_Trial_Profile__r.Override_Recruitment_Status__c, &quot;On Hold&quot;))</errorConditionFormula>
        <errorMessage>This Override Study Site Recruitment Status value cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_End_enrolment_date</fullName>
        <active>false</active>
        <errorConditionFormula>Enrollment_Start_Date__c  &gt;  Enrollment_End_Date__c</errorConditionFormula>
        <errorMessage>Enrollment End Date can&apos;t happen before Enrolment Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Study_Site_Status_Freeze</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISCHANGED(Override_Study_Site_Recruitment_Status__c),
ISPICKVAL(PRIORVALUE(Override_Study_Site_Recruitment_Status__c),&quot;Enrollment Closed&quot;)
, Override_Status_Updated_By__c = &apos;IQVIA SPNL&apos;)</errorConditionFormula>
        <errorMessage>This Override Study Site Recruitment Status value cannot be changed</errorMessage>
    </validationRules>
</CustomObject>